[package]
name = "gmtk_2023_escape_room"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.26"
ron = "0.8.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_derive = "1.0.171"
